examples/binary/klee-out-0/test000008.kquery
array a[40] : w32 -> w8 = symbolic
array x[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Eq N0:(ReadLSB w32 16 a)
                 N1:(ReadLSB w32 0 x)))
         (Slt N0 N1)
         (Eq false
             (Eq N2:(ReadLSB w32 28 a)
                 N1))
         (Eq false (Slt N2 N1))
         (Eq false
             (Eq N3:(ReadLSB w32 20 a)
                 N1))
         (Eq false (Slt N3 N1))
         (Eq (ReadLSB w32 0 a)
             N1)]
        false)
